--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,9 @@
 
 <head>
 	<meta charset="utf-8" />
-	<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+	<link rel="icon" href="%PUBLIC_URL%/favicon (2).ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="theme-color" content="#000000" />
-	<meta name="description" content="Web site created using create-react-app" />
-	<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-	<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-	<title>8 Марта</title>
+	<title>Fox 8 March</title>
 </head>
 
 <body>
